# http-server-rust

./: Cargo.toml  README.md
src/: common.rs  constants.rs  lib.rs  main.rs  request.rs  response.rs  roadmap.md  router.rs  routing.rs  routing_abc.rs  server.rs  utils.rs
src/http/: method.rs  mod.rs  request.rs  response.rs  version.rs
src/routing/: builder.rs  mod.rs  route.rs
src/utils/: http.rs
tests/: request.rs  response.rs  router.rs
