[package]
name = "schnell"
version = "0.1.0"
edition = "2024"

[lib]
name = "schnell"
path = "src/lib.rs"

[[bin]]
name = "schnell"
path = "src/main.rs"

[dependencies]
scoped_threadpool = "0.1.9"
num_cpus = "1.17.0"
env = "1.0.1"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.30"

[dev-dependencies]
